     incorrectly
 * Language and i18n:
   * Updated translations: British English, Dutch, Finnish, Galician,
     Indonesian, Italian, Korean, Latvian, Lithuanian, Old English
 * WML engine:
   * Added [secondary_unit] SUF for filtering the recalling leader in [recall]
     action WML
   * Fixed red, green and blue keys in 24-hour ToD not maching the default
     schedule colors
 * Miscellaneous and bug fixes:
   * Fixed disappearing theme UI buttons after changing fullscreen/windowed mode
     or resolution in Preferences during a game
   * Fixed define handling of wmlxgettext (bug #18622)
   * Changed: Try to recover from broken pango-markup.

Version 1.9.10:
 * AI:
   * Fixed: Display of recruitment_ignore_bad_combat and
     recruitment_ignore_bad_movement is no longer swapped (bug #18839)
 * Campaigns:
   * Descent into Darkness:
     * A Small Favor, part 1: used 24 hour ToD
   * Son of the Black Eye:
     * To the Harbor of Tirigaz: used 24 hour ToD
   * Under the Burning Suns
     * Subterranean Struggle: no longer possible to win by allowing allies to
       die
     * Across the Harsh Sands: the Black Hand oasis is no longer possible to
       enter without triggering the bandits
 * Editor:
   * Made sure lighting setting changes are applied immediately when closing the
     settings window when automatic map view updates are disabled
   * Starting position tool menu now displays coordinates of existing positions,
     and initially highlights the current player number assigned to the selected
     hex
   * Add a menu item "Refresh WML" to reload terrain WML
 * Graphics:
   * New Animations:
     * Goblin spearman run se
     * Merman fighter attack se
     * Tinted the slowed snail icon to match the new slowed unit color
   * Terrain:
     * Tall encampment keep can now be placed next to the tent encampment keep
     * Forest/hill terrain combinations no longer appear black on the minimap
   * Default team color always applied last; fixes bug #18817