@@ -16,6 +16,8 @@ Version 1.9.10+svn:
      action WML
    * Fixed red, green and blue keys in 24-hour ToD not maching the default
      schedule colors
+   * Reworked [harm_unit]'s damage calculation code to avoid leadership ability
+     altering the damage value
  * Miscellaneous and bug fixes:
    * Fixed disappearing theme UI buttons after changing fullscreen/windowed mode
      or resolution in Preferences during a game
